2002-12-01  James Henstridge  <james@daa.com.au>

	* src/Makefile.am: install font-method.conf
