@@ -1,0 +1,5 @@
+[Desktop Entry]
+Name=Font Catalogue
+Comment=Font Catalogue
+Type=Directory
+Icon=font-capplet
